// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`existing built-ins unchanged > snapshots existing built-in configs 1`] = `
{
  "barcode": {
    "bold": false,
    "fontSize": 9,
    "height": 7,
    "show": true,
    "width": 44,
    "x": 3,
    "y": 24,
  },
  "barcodeHeight": 28,
  "barcodeText": {
    "bold": false,
    "fontSize": 7,
    "show": true,
    "textAlign": "center",
    "width": 48,
    "x": 1,
    "y": 31.5,
  },
  "barcodeWidth": 2.2,
  "billNumber": {
    "bold": false,
    "fontSize": 6,
    "show": false,
    "width": 20,
    "x": 1,
    "y": 34,
  },
  "brand": {
    "bold": true,
    "fontSize": 8,
    "show": true,
    "textAlign": "center",
    "width": 50,
    "x": 0,
    "y": 7.5,
  },
  "businessName": {
    "bold": true,
    "fontSize": 8,
    "show": true,
    "textAlign": "center",
    "width": 49,
    "x": 0.5,
    "y": 3,
  },
  "category": {
    "bold": false,
    "fontSize": 7,
    "show": false,
    "width": 20,
    "x": 1,
    "y": 16,
  },
  "color": {
    "bold": false,
    "fontSize": 7,
    "show": false,
    "width": 20,
    "x": 1,
    "y": 16,
  },
  "customText": {
    "bold": false,
    "fontSize": 7,
    "show": false,
    "textAlign": "center",
    "width": 48,
    "x": 1,
    "y": 36,
  },
  "customTextValue": "",
  "fieldOrder": [
    "businessName",
    "brand",
    "productName",
    "size",
    "style",
    "mrp",
    "price",
    "barcode",
    "barcodeText",
    "category",
    "color",
    "qty",
    "customText",
    "billNumber",
    "supplierCode",
    "purchaseCode",
    "supplierInvoiceNo",
  ],
  "lines": [],
  "mrp": {
    "bold": true,
    "fontSize": 8,
    "show": true,
    "textAlign": "right",
    "width": 20,
    "x": 28,
    "y": 17,
  },
  "price": {
    "bold": true,
    "fontSize": 9,
    "show": true,
    "textAlign": "right",
    "width": 20,
    "x": 28,
    "y": 20.5,
  },
  "productName": {
    "bold": true,
    "fontSize": 9,
    "show": true,
    "textAlign": "center",
    "width": 47,
    "x": 1.5,
    "y": 12.5,
  },
  "purchaseCode": {
    "bold": false,
    "fontSize": 6,
    "show": false,
    "width": 20,
    "x": 1,
    "y": 35,
  },
  "qty": {
    "bold": false,
    "fontSize": 7,
    "show": false,
    "width": 20,
    "x": 1,
    "y": 23,
  },
  "size": {
    "bold": true,
    "fontSize": 8,
    "show": true,
    "textAlign": "left",
    "width": 15,
    "x": 2,
    "y": 17,
  },
  "style": {
    "bold": false,
    "fontSize": 7,
    "show": true,
    "textAlign": "left",
    "width": 22,
    "x": 2,
    "y": 20.5,
  },
  "supplierCode": {
    "bold": false,
    "fontSize": 6,
    "show": false,
    "width": 24,
    "x": 25,
    "y": 34,
  },
  "supplierInvoiceNo": {
    "bold": false,
    "fontSize": 6,
    "show": false,
    "width": 24,
    "x": 25,
    "y": 35,
  },
}
`;

exports[`existing built-ins unchanged > snapshots existing built-in configs 2`] = `
{
  "barcode": {
    "bold": false,
    "fontSize": 9,
    "height": 10,
    "show": true,
    "width": 40,
    "x": 2,
    "y": 20,
  },
  "barcodeHeight": 28,
  "barcodeText": {
    "bold": true,
    "fontSize": 8,
    "show": true,
    "textAlign": "center",
    "width": 40,
    "x": 1,
    "y": 31,
  },
  "barcodeWidth": 2,
  "billNumber": {
    "bold": false,
    "fontSize": 6,
    "show": false,
    "width": 20,
    "x": 1,
    "y": 34,
  },
  "brand": {
    "bold": true,
    "fontSize": 8,
    "show": true,
    "width": 40,
    "x": 1,
    "y": 8,
  },
  "businessName": {
    "bold": true,
    "fontSize": 11,
    "show": true,
    "textAlign": "center",
    "width": 42,
    "x": 1,
    "y": 0.5,
  },
  "category": {
    "bold": true,
    "fontSize": 8,
    "show": false,
    "width": 40,
    "x": 1,
    "y": 10,
  },
  "color": {
    "bold": true,
    "fontSize": 8,
    "show": true,
    "width": 40,
    "x": 1,
    "y": 12,
  },
  "customText": {
    "bold": false,
    "fontSize": 7,
    "show": false,
    "textAlign": "center",
    "width": 40,
    "x": 1,
    "y": 34,
  },
  "customTextFields": [],
  "customTextValue": "",
  "fieldOrder": [
    "businessName",
    "productName",
    "style",
    "brand",
    "color",
    "size",
    "mrp",
    "barcode",
    "barcodeText",
    "purchaseCode",
    "category",
    "price",
    "qty",
    "customText",
    "billNumber",
    "supplierCode",
    "supplierInvoiceNo",
  ],
  "labelStyle": "boutique-grid",
  "lines": [],
  "mrp": {
    "bold": true,
    "fontSize": 12,
    "show": true,
    "width": 40,
    "x": 1,
    "y": 16,
  },
  "price": {
    "bold": true,
    "fontSize": 8,
    "show": false,
    "width": 40,
    "x": 1,
    "y": 16,
  },
  "productName": {
    "bold": true,
    "fontSize": 8,
    "show": true,
    "width": 40,
    "x": 1,
    "y": 4,
  },
  "purchaseCode": {
    "bold": true,
    "fontSize": 7,
    "show": true,
    "width": 5,
    "x": 44,
    "y": 8,
  },
  "qty": {
    "bold": false,
    "fontSize": 7,
    "show": false,
    "width": 20,
    "x": 1,
    "y": 18,
  },
  "size": {
    "bold": true,
    "fontSize": 8,
    "show": true,
    "width": 40,
    "x": 1,
    "y": 14,
  },
  "style": {
    "bold": true,
    "fontSize": 8,
    "show": true,
    "width": 40,
    "x": 1,
    "y": 6,
  },
  "supplierCode": {
    "bold": false,
    "fontSize": 6,
    "show": false,
    "width": 20,
    "x": 25,
    "y": 34,
  },
  "supplierInvoiceNo": {
    "bold": false,
    "fontSize": 6,
    "show": false,
    "width": 20,
    "x": 25,
    "y": 35,
  },
}
`;
